[package]
name = "superdev-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.55.0"
shuttle-runtime = "0.55.0"
tokio = "1.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
solana-system-interface = "1.0"
spl-associated-token-account = "7.0"
base64 = "0.22"
solana-sdk = "2.0"
env_logger = "0.11"
spl-token = "8.0"
bs58 = "0.5"